--- a/trunk/BigPlanetTW/.project
+++ b/trunk/BigPlanetTW/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>BigPlanetTW 1.6.0</name>
+	<name>BigPlanetTW</name>
 	<comment></comment>
 	<projects>
 	</projects>
