--- a/trunk/BigPlanetTW/AndroidManifest.xml
+++ b/trunk/BigPlanetTW/AndroidManifest.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
 	package="com.nevilon.bigplanet"
-	android:versionCode="8"
-	android:versionName="1.6.2">
+	android:versionCode="9"
+	android:versionName="1.6.3">
 	<uses-permission android:name="android.permission.INTERNET"/>
 	<uses-permission android:name="android.permission.ACCESS_LOCATION_EXTRA_COMMANDS"/>
 	<uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
 	<uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
 
-	<application android:name="com.nevilon.bigplanet.core.BigPlanetApp" android:debuggable="true"
+	<application android:name="com.nevilon.bigplanet.core.BigPlanetApp" android:debuggable="false"
 		android:icon="@drawable/globe" android:label="@string/app_name">
 		
 		<activity android:configChanges="keyboardHidden|orientation"
