1.在MarkerManager.java->addMarker method中,if(trackType==2)敘述應該要補齊,否則目前無法畫出路徑,請昱超研究一下。 2.我已經將placeList及type=2傳入上述method中。

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -31,6 +31,12 @@
 			</intent-filter>
 			<meta-data android:name="android.app.searchable" android:resource="@xml/searchable" />
 		</activity>
+		<activity android:name="org.traveler.track_manage.view.ExtendedCheckBoxListActivity"
+                  android:label="@string/track_list_view">
+        </activity>
+        <activity android:name="org.traveler.track_manage.view.TrackListViewActivity"
+                  android:label="@string/track_browse_view">
+        </activity>
 
 	</application>
 </manifest> 
