1.新增 Store GPS Location List to Database 功能, 當按下第二次   紀錄按鈕後會將GPS Track 儲存至DB

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -39,6 +39,10 @@
         <activity android:name="org.traveler.track_manage.view.TrackListViewActivity"
                   android:label="@string/track_browse_view">
         </activity>
+        
+        <activity android:name="org.traveler.track_manage.simulate.GpsTrackStorageSimulatorActivity"
+                  android:label="@string/Gps_track_storage_simu_view">
+        </activity>
 
 	</application>
 </manifest> 
