--- a/branches/BigPlanetTrack/.classpath
+++ b/branches/BigPlanetTrack/.classpath
@@ -3,5 +3,10 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="gen"/>
 	<classpathentry kind="con" path="com.android.ide.eclipse.adt.ANDROID_FRAMEWORK"/>
+	<classpathentry kind="lib" path="lib/smack.jar">
+		<attributes>
+			<attribute name="javadoc_location" value="http://www.igniterealtime.org/builds/smack/docs/3.1.0/javadoc/"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
