--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
 	package="com.nevilon.bigplanet"
-	android:versionCode="11"
-	android:versionName="1.6.5">
+	android:versionCode="12"
+	android:versionName="1.6.6">
 	<uses-permission android:name="android.permission.INTERNET"/>
 	<uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
 	<uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
@@ -23,8 +23,6 @@
 			android:name=".AllGeoBookmarks">
 		</activity>
 		
-		<activity android:name="org.traveler.googleclientlogin.GoogleAccountClient"/>
-
 		<activity android:configChanges="keyboardHidden|orientation" android:theme="@android:style/Theme.Dialog"
 			android:name=".FindPlace" android:launchMode="singleTop">
 			<intent-filter>
@@ -33,9 +31,13 @@
 			</intent-filter>
 			<meta-data android:name="android.app.searchable" android:resource="@xml/searchable" />
 		</activity>
+		
+		<activity android:name="org.traveler.googleclientlogin.GoogleAccountActivity"/>
+
 		<activity android:name="org.traveler.track_manage.view.ExtendedCheckBoxListActivity"
                   android:label="@string/track_list_view">
         </activity>
+        
         <activity android:name="org.traveler.track_manage.view.TrackListViewActivity"
                   android:label="@string/track_browse_view">
         </activity>
