--- a/branches/BigPlanetTrack/AndroidManifest.xml
+++ b/branches/BigPlanetTrack/AndroidManifest.xml
@@ -32,19 +32,21 @@
 			<meta-data android:name="android.app.searchable" android:resource="@xml/searchable" />
 		</activity>
 		
-		<activity android:name="org.traveler.googleclientlogin.GoogleAccountActivity"/>
-
+		<activity android:name="org.traveler.googleclientlogin.GoogleAccountActivity"
+			android:configChanges="keyboardHidden|orientation">
+		</activity>
+		
 		<activity android:name="org.traveler.track_manage.view.ExtendedCheckBoxListActivity"
-                  android:label="@string/track_list_view">
-        </activity>
-        
-        <activity android:name="org.traveler.track_manage.view.TrackListViewActivity"
-                  android:label="@string/track_browse_view">
-        </activity>
-        
-        <activity android:name="org.traveler.track_manage.simulate.GpsTrackStorageSimulatorActivity"
-                  android:label="@string/Gps_track_storage_simu_view">
-        </activity>
-
+			android:label="@string/track_list_view">
+		</activity>
+		
+		<activity android:name="org.traveler.track_manage.view.TrackListViewActivity"
+			android:label="@string/track_browse_view">
+		</activity>
+		
+		<activity android:name="org.traveler.track_manage.simulate.GpsTrackStorageSimulatorActivity"
+			android:label="@string/Gps_track_storage_simu_view">
+		</activity>
+	
 	</application>
 </manifest> 
