--- a/branches/BigPlanetTrack/AndroidManifest.xml
+++ b/branches/BigPlanetTrack/AndroidManifest.xml
@@ -33,6 +33,7 @@
 		</activity>
 		
 		<activity android:name="org.traveler.googleclientlogin.GoogleAccountActivity"
+			android:label="@string/share_location_title"
 			android:configChanges="keyboardHidden|orientation">
 		</activity>
 		
